[project]
name = "prosocialinterventions"
version = "0.1.0"
description = "A project to improve the reproducibility of https://github.com/cssmodels/prosocialinterventions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openai>=1.108.1",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]
